javascript modification to ensure closed navbar on load

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     </div>
     <div class="ParallaxContainer">
         <!-- Parallax Background Content -->
+        <div class="ParralaxHalf"></div>
     </div>
 
     <article>
