--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <meta name="description" content="Coen Isaac Drexler's web development portfolio - creative to creator, a 6 month progressive journey in programming.">
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1>
   <link rel="icon" href="Images/drawing.png">
 
   <title>Home | CID Coding</title>  
