--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 
-  <link rel="preload" href="Scripts/globalstyles.css" as="stylesheet">
-  <link rel="preload" href="https://fonts.googleapis.com/css?family=Raleway&display=swap" as="stylesheet">
+  <link rel="preload" href="Scripts/globalstyles.css" as="style">
+  <link rel="preload" href="https://fonts.googleapis.com/css?family=Raleway&display=swap" as="font">
   <link rel="preload" href="Scripts/scrollupdate.js" as="script">
-  <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" as="stylesheet">
+  <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" as="font">
   
   <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
   <link href="Scripts/globalstyles.css" rel="stylesheet">
@@ -14,8 +14,8 @@
 
   <meta name="description" content="Coen Isaac Drexler's web development portfolio - creative to creator, a 6 month progressive journey in programming.">
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1>
-  <link rel="icon" href="Images/drawing.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel='icon' href="Images/drawing.png">
 
   <title>Home | CID Coding</title>  
   
