I hope it fixes

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
               <span class="logo-part" ><img class="navbarlogoleft" src="Images/logo_half.png"></span>
     
               <div class="navbar_linkbox">
-                  <a class="nav-link" href="works.html">WORK</a>
-                  <a class="nav-link" href="motivation.html">PURPOSE</a>
+                  <a class="nav-link" href="portfolio.html">WORK</a>
+                  <a class="nav-link" href="purpose.html">PURPOSE</a>
               </div>
     
               <span class="logo-part hover-expand" >|</span>
