--- a/contact.html
+++ b/contact.html
@@ -55,10 +55,10 @@
       </div>
 
       <article class="contactme_container">
-          <div class="contactcard">
+          <div class="contactcard blueback">
             <p>Test</p>
           </div>
-          <div class="contactcard">
+          <div class="contactcard mediumcolour">
             <p>Test</p>
           </div>
           <div class="contactcard">
