--- a/purpose.html
+++ b/purpose.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <div class="topbar">
-        <div class="MediaLinks">
+        <div class="MediaLinks blueback">
           <a href="https://github.com/Coencidental" rel="noopener" target="_blank" aria-label="Github Link"><span class="fa fa-github" id="github"></span></a>
           <a href="https://www.linkedin.com/in/coendrexler" rel="noopener" target="_blank" aria-label="LinkedIn Link"><span class="fa fa-linkedin" id="linkedin"></span></a>
           <a href="mailto:cdrexler1999@gmail.com" rel="noopener" target="_blank" aria-label="Direct Email Link"><span class="fa fa-envelope-o" id="email"></span></a>
