navbar scale change

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                   <a class="nav-link" href="purpose.html">PURPOSE</a>
               </div>
     
-              <span class="logo-part hover-expand" >|</span>
+              <span class="logo-part" >|</span>
     
               <div class="navbar_linkbox">
                   <a class="nav-link" href="contact.html">CONTACT</a>
