--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <link rel="preload" href="Scripts/globalstyles.css" as="style">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Raleway&display=swap" as="font">
   <link rel="preload" href="Scripts/scrollupdate.js" as="script">
-  <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" as="font">
+  <!-- <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" as="font"> -->
+  <link rel="preload" href="Scripts/portfoliostyles.css" as="style">
+
   
   <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
   <link href="Scripts/globalstyles.css" rel="stylesheet">
@@ -17,6 +19,7 @@
   <meta name="viewport" content="width=device-width">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <link rel='icon' href="Images/drawing.png">
+  
 
   <title>Home | CID Coding</title>  
   
