--- a/portfolio.html
+++ b/portfolio.html
@@ -6,9 +6,11 @@
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Raleway&display=swap" as="font">
   <!-- <link rel="preload" href="Scripts/scrollupdate.js" as="script"> -->
   <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" as="font">
+  <link rel="preload" href="Scripts/portfoliostyles.css" as="style">
   
   <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
   <link href="Scripts/globalstyles.css" rel="stylesheet">
+  <link href="Scripts/portfoliostyles.css" rel="stylesheet">
   <!-- <script src="Scripts/scrollupdate.js"></script> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -54,7 +56,11 @@
   
       </div>
 
-      <p class="blueback">Okay</p>
+      <article class="portfolio">
+      <h1 class="textcenter">Text</h1>
+      
+      
+      </article>
 
 </body>
 </html>
