--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>   
 
-  <div class="MainContainer">
+  <div class="MainContainer invert">
     <!-- All Content -->
     <div class="topbar">
       <div class="MediaLinks">
