Modified colour scheme/css

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <p>TO _DEVELOPER</p>
 
 
-          <p class="center">&lt;oen Isaac &gt;rexler</p>
+          <p class="center invert">&lt;oen Isaac &gt;rexler</p>
         <!-- </div> -->
     </div>
 
@@ -76,7 +76,8 @@
       <div class="ContentContainer scroll-auto">
       <!-- Actual Article Content Goes Here -->
       <section class="textcenter">
-        <h1>Hello, it's my pleasure to introduce myself.</h1>
+        <header><h1>Hello, it's my pleasure to introduce myself.</h1></header>
+        
 
         <p>My name is Coen Drexler.</p>
 
