Styling, refactoring and structure

--- a/purpose.html
+++ b/purpose.html
@@ -21,7 +21,7 @@
   
 </head>
 <body>
-    <div class="topbar">
+    <div class="topbar inverted">
         <div class="MediaLinks">
           <a href="https://github.com/Coencidental" rel="noopener" target="_blank" aria-label="Github Link"><span class="fa fa-github" id="github"></span></a>
           <a href="https://www.linkedin.com/in/coendrexler" rel="noopener" target="_blank" aria-label="LinkedIn Link"><span class="fa fa-linkedin" id="linkedin"></span></a>
