--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,11 @@
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Raleway&display=swap" as="font">
   <!-- <link rel="preload" href="Scripts/scrollupdate.js" as="script"> -->
   <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" as="font">
+  <link rel="preload" href="Scripts/contactstyles.css" as="style">
   
   <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
   <link href="Scripts/globalstyles.css" rel="stylesheet">
+  <link href="Scripts/contactstyles.css" rel="stylesheet">
   <!-- <script src="Scripts/scrollupdate.js"></script> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -21,7 +23,7 @@
   
 </head>
 <body>
-    <div class="topbar">
+    <div class="topbar inverted">
         <div class="MediaLinks">
           <a href="https://github.com/Coencidental" rel="noopener" target="_blank" aria-label="Github Link"><span class="fa fa-github" id="github"></span></a>
           <a href="https://www.linkedin.com/in/coendrexler" rel="noopener" target="_blank" aria-label="LinkedIn Link"><span class="fa fa-linkedin" id="linkedin"></span></a>
@@ -54,19 +56,32 @@
   
       </div>
 
-      <article class="contactme_container">
+      <article class="Contact_Container">
+        <section class="contactme_container">
           <div class="contactcard blueback">
-            <p>Test</p>
+            <span class="fa fa-facebook"></span>
           </div>
           <div class="contactcard mediumcolour">
-            <p>Test</p>
+            <span class="fa fa-instagram"></span>
           </div>
           <div class="contactcard">
-            <p>Test</p>
+              <p>Test</p>
+            </div> 
+          <div class="contactcard linkedback">
+            <span class="fa fa-linkedin">
           </div>
-          <div class="contactcard">
+          
+        </section>
+        <section class="blog_container">
+          <h2 class="textcenter">Blog</h2>
+          <div class="blogpost">
+
             <p>Test</p>
-          </div> 
+
+          </div>
+
+
+        </section>
       </article>
 </body>
 </html>
