contact page centering and blog placeholders

--- a/contact.html
+++ b/contact.html
@@ -64,8 +64,8 @@
           <div class="contactcard mediumcolour">
             <span class="fa fa-instagram"></span>
           </div>
-          <div class="contactcard">
-              <p>Test</p>
+          <div class="contactcard mediumcolour">
+            <span class="fa fa-twitter"></span>
             </div> 
           <div class="contactcard linkedback">
             <span class="fa fa-linkedin">
@@ -73,10 +73,30 @@
           
         </section>
         <section class="blog_container">
-          <h2 class="textcenter">Blog</h2>
+          <h2 class="textcenter">Permanent Blog Entries</h2>
           <div class="blogpost">
 
-            <p>Test</p>
+            <p>Blog Article 1</p>
+
+          </div>
+          <div class="blogpost">
+
+            <p>Blog Article 2</p>
+
+          </div>
+          <div class="blogpost">
+
+            <p>Blog Article 3</p>
+
+          </div>
+          <div class="blogpost">
+
+            <p>Blog Article 4</p>
+
+          </div>
+          <div class="blogpost">
+
+            <p>Blog Article 5</p>
 
           </div>
 
