Portfolio styling and extra content composed

--- a/contact.html
+++ b/contact.html
@@ -76,27 +76,27 @@
           <h2 class="textcenter">Permanent Blog Entries</h2>
           <div class="blogpost">
 
-            <p>Blog Article 1</p>
+            <h3>Blog Article 1</h3>
 
           </div>
           <div class="blogpost">
 
-            <p>Blog Article 2</p>
+            <h3>Blog Article 2</h3>
 
           </div>
           <div class="blogpost">
 
-            <p>Blog Article 3</p>
+            <h3>Blog Article 3</h3>
 
           </div>
           <div class="blogpost">
 
-            <p>Blog Article 4</p>
+            <h3>Blog Article 4</h3>
 
           </div>
           <div class="blogpost">
 
-            <p>Blog Article 5</p>
+            <h3>Blog Article 5</h3>
 
           </div>
 
