--- a/portfolio.html
+++ b/portfolio.html
@@ -91,7 +91,7 @@
 
         <div class="skillbar">
           <div class="skilltile">
-            <span class="devicon-javascript-plain"></span>
+              <img src="https://img.icons8.com/ios/100/000000/audio-wave.png">
           </div>
           <div class="skilldesc">
             <p>Description of my experience in this skillset</p>
