Portfolio tile updates, css mods

--- a/contact.html
+++ b/contact.html
@@ -59,21 +59,21 @@
       <article class="Contact_Container">
         <section class="contactme_container">
           <div class="contactcard blueback">
-            <span class="fa fa-facebook"></span>
+              <a href="https://twitter.com/Coencidental"><span class="fa fa-facebook"></span></a>
           </div>
           <div class="contactcard mediumcolour">
-            <span class="fa fa-instagram"></span>
+              <a href="https://twitter.com/Coencidental"><span class="fa fa-instagram"></span></a>
           </div>
           <div class="contactcard mediumcolour">
-            <span class="fa fa-twitter"></span>
-            </div> 
+            <a href="https://twitter.com/Coencidental"><span class="fa fa-twitter"></span></a>
+          </div> 
           <div class="contactcard linkedback">
-            <span class="fa fa-linkedin">
+            <a href="https://twitter.com/Coencidental"><span class="fa fa-linkedin"></span></a>
           </div>
           
         </section>
         <section class="blog_container">
-          <h2 class="textcenter">Permanent Blog Entries</h2>
+          <h2 class="textcenter">Things I considered important enough to blog:</h2>
           <div class="blogpost">
 
             <h3>Blog Article 1</h3>
