--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
               <span class="devicon-html5-plain"></span>
           </div>
           <div class="skilldesc">
-              <p>Description of my experience in this skillset</p>
+              <p>I have basic experience in the use of HTML for page markup.</p>
           </div>
         </div>
 
@@ -76,7 +76,7 @@
             <span class="devicon-css3-plain"></span>
           </div>
           <div class="skilldesc">
-            <p>Description of my experience in this skillset</p>
+            <p>Alongside basic experience in HTML, I have corresponding basic CSS3 design skills.</p>
           </div>
         </div>
 
@@ -85,7 +85,7 @@
               <span class="devicon-ruby-plain"></span>
           </div>
           <div class="skilldesc">
-              <p>Description of my experience in this skillset</p>
+              <p>I understand the fundamental aspects of Object Oriented Programming, the general Ruby syntax and programming process, and am now learning to expand my abilities with such languages by using Ruby to build more.</p>
           </div>
         </div>
 
@@ -94,7 +94,16 @@
               <img src="https://img.icons8.com/ios/100/000000/audio-wave.png">
           </div>
           <div class="skilldesc">
-            <p>Description of my experience in this skillset</p>
+            <p>My forté of experience is in audio.  From the production, post production, preparation, performance, design, manipulation, restoration, and anything else you could want.</p>
+          </div>
+        </div>
+
+        <div class="skillbar">
+          <div class="skilltile">
+              <img class="coderacademy"src="Images/CA.svg">
+          </div>
+          <div class="skilldesc">
+              <p>I have basic experience in the use of HTML for page markup.</p>
           </div>
         </div>
 
