--- a/purpose.html
+++ b/purpose.html
@@ -53,6 +53,10 @@
           </div>
   
       </div>
-
+      <article class="purpose">
+        <section>
+          <p>I truly, genuinely, and thoroughly love audio, and it will always define the path of interest to me.  I believe wholeheartedly in the power and influence of audio, and in an accessible world, I love the idea of providing currently disabled yet entirely creative minds with the ability to express, and participate.  </p>
+        </section>
+      </article>
 </body>
 </html>
