--- a/contact.html
+++ b/contact.html
@@ -74,33 +74,53 @@
         </section>
         <section class="blog_container">
           <h2 class="textcenter">Things I considered important enough to blog:</h2>
+
           <div class="blogpost">
-
-            <h3>Blog Article 1</h3>
-
-          </div>
-          <div class="blogpost">
-
-            <h3>Blog Article 2</h3>
-
-          </div>
-          <div class="blogpost">
-
-            <h3>Blog Article 3</h3>
-
-          </div>
-          <div class="blogpost">
-
-            <h3>Blog Article 4</h3>
-
-          </div>
-          <div class="blogpost">
-
-            <h3>Blog Article 5</h3>
-
+            <div class="post_title">
+            <h3>Date + Post Title</h3>
+            </div>
+            <div class="post_content">
+              <p>Post content</p>
+            </div>
           </div>
 
+          <div class="blogpost">
+            <div class="post_title">
+              <h3>Date + Post Title</h3>
+            </div>
+            <div class="post_content">
+              <p>Post content</p>
+            </div>
+          </div>
 
+          <div class="blogpost">
+            <div class="post_title">
+              <h3>Date + Post Title</h3>
+            </div>
+            <div class="post_content">
+              <p>Post content</p>
+            </div>
+          </div>
+
+          <div class="blogpost">
+            <div class="post_title">
+              <h3>Date + Post Title</h3>
+            </div>
+            <div class="post_content">
+              <p>Post content</p>
+            </div>
+          </div>
+
+          <div class="blogpost">
+            <div class="post_title">
+              <h3>Date + Post Title</h3>
+            </div>
+            <div class="post_content">
+              <p>Post content</p>
+            </div>
+          </div>
+
+            
         </section>
       </article>
 </body>
