--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
               <span class="devicon-html5-plain"></span>
           </div>
           <div class="skilldesc">
-              <p>I have basic experience in the use of HTML for page markup.</p>
+              <p>I have a fundamental level of knowledge in the use of HTML and HTML5 for document structuring and markup.</p>
           </div>
         </div>
 
@@ -76,7 +76,7 @@
             <span class="devicon-css3-plain"></span>
           </div>
           <div class="skilldesc">
-            <p>Alongside basic experience in HTML, I have corresponding basic CSS3 design skills.</p>
+            <p>Alongside HTML, I have corresponding CSS3 design skills.  I am able to lay out and design a page fairly comfortable, and am beginning to learn to use more abstract methods of interactive design, such as the homepage of this website.</p>
           </div>
         </div>
 
