--- a/purpose.html
+++ b/purpose.html
@@ -3,12 +3,14 @@
 <head>
 
   <link rel="preload" href="Scripts/globalstyles.css" as="style">
+  <link rel="preload" href="Scripts/purposestyles.css" as="style">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Raleway&display=swap" as="font">
   <!-- <link rel="preload" href="Scripts/scrollupdate.js" as="script"> -->
   <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" as="font">
   
   <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
   <link href="Scripts/globalstyles.css" rel="stylesheet">
+  <link href="Scripts/purposestyles.css" rel="stylesheet">
   <!-- <script src="Scripts/scrollupdate.js"></script> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -53,9 +55,12 @@
           </div>
   
       </div>
-      <article class="purpose">
+      <article class="purposecontainer">
         <section>
-          <p>I truly, genuinely, and thoroughly love audio, and it will always define the path of interest to me.  I believe wholeheartedly in the power and influence of audio, and in an accessible world, I love the idea of providing currently disabled yet entirely creative minds with the ability to express, and participate.  </p>
+          <h1 class="textcenter">Who am I?  Who cares?</h1>
+          <p>I truly, genuinely love audio, and it will always define the path of interest to me.  I believe wholeheartedly in the power and influence of audio, and in an accessible world, I love the idea of providing currently disabled yet entirely creative minds with the ability to express, and participate.  </p>
+          <p>And that's where my story began, trying to make a musician out of myself and to defy the odds of the people who had held me down.  Not a great first impression to you, I know, and I'm sorry for that, but it lends very significantly to the road I find myself on now.</p> 
+        
         </section>
       </article>
 </body>
