blog modifications, thumbnail addition, responsive layout

--- a/contact.html
+++ b/contact.html
@@ -91,6 +91,9 @@
             <div class="post_content">
               <p>Post content</p>
             </div>
+            <div class="post_thumbnail">
+              <img src="Images/Basic logo.png">
+            </div>
           </div>
 
           <div class="blogpost">
