--- a/index.html
+++ b/index.html
@@ -64,11 +64,15 @@
     <div class="ParallaxContainer scroll-auto">
         <!-- Parallax Background Content -->
         <!-- <div class="ParallaxHalf"> -->
-          <p>FROM _CREATOR</p>
-          <p>TO _DEVELOPER</p>
+          <div class="BannerSlogan">
+          <p><span class="bannertext">&lt;</span>OLOURBLIND</p>
+          <p>_<span class="bannertext">&gt;</span>EVELOPMENT</p>
+          </div>
+          <!-- <p id="bannertextsmall">Support a colourblind developer like me, and keep the world safer for everyone.</p> -->
 
-
-          <p class="center invert">&lt;oen Isaac &gt;rexler</p>
+          <!-- <div class="BannerSlogan">
+          <p class="center invert">Coen Isaac Drexler</p>
+          </div> -->
         <!-- </div> -->
     </div>
 
