--- a/purpose.html
+++ b/purpose.html
@@ -56,11 +56,11 @@
   
       </div>
       <article class="purposecontainer">
-        <section>
-          <h1 class="textcenter">Who am I?  Who cares?</h1>
+        <section class="mypurpose">
+          <h2 class="textcenter">Who am I?  Who cares?</h2>
+          <hr>
           <p>I truly, genuinely love audio, and it will always define the path of interest to me.  I believe wholeheartedly in the power and influence of audio, and in an accessible world, I love the idea of providing currently disabled yet entirely creative minds with the ability to express, and participate.  </p>
           <p>And that's where my story began, trying to make a musician out of myself and to defy the odds of the people who had held me down.  Not a great first impression to you, I know, and I'm sorry for that, but it lends very significantly to the road I find myself on now.</p> 
-        
         </section>
       </article>
 </body>
