--- a/contact.html
+++ b/contact.html
@@ -59,16 +59,16 @@
       <article class="Contact_Container">
         <section class="contactme_container">
           <div class="contactcard blueback">
-              <a href="https://twitter.com/Coencidental"><span class="fa fa-facebook"></span></a>
+              <a href="https://twitter.com/Coencidental"><span class="fa fa-twitter"></span></a>
           </div>
           <div class="contactcard mediumcolour">
-              <a href="https://twitter.com/Coencidental"><span class="fa fa-instagram"></span></a>
+              <a href="https://twitter.com/Coencidental"><span class="fa fa-medium"></span></a>
           </div>
           <div class="contactcard mediumcolour">
-            <a href="https://twitter.com/Coencidental"><span class="fa fa-twitter"></span></a>
+            <a href="https://twitter.com/Coencidental"><span class="fa fa-soundcloud"></span></a>
           </div> 
           <div class="contactcard linkedback">
-            <a href="https://twitter.com/Coencidental"><span class="fa fa-linkedin"></span></a>
+            <a href="https://twitter.com/Coencidental"><span class="fa fa-linkedin-square"></span></a>
           </div>
           
         </section>
