centered and styled purpose page

--- a/contact.html
+++ b/contact.html
@@ -62,13 +62,13 @@
               <a href="https://twitter.com/Coencidental"><span class="fa fa-twitter"></span></a>
           </div>
           <div class="contactcard mediumcolour">
-              <a href="https://twitter.com/Coencidental"><span class="fa fa-medium"></span></a>
+              <a href="https://medium.com/@coencidental"><span class="fa fa-medium"></span></a>
           </div>
           <div class="contactcard mediumcolour">
-            <a href="https://twitter.com/Coencidental"><span class="fa fa-soundcloud"></span></a>
+            <a href="https://soundcloud.com/coendrexler"><span class="fa fa-soundcloud"></span></a>
           </div> 
           <div class="contactcard linkedback">
-            <a href="https://twitter.com/Coencidental"><span class="fa fa-linkedin-square"></span></a>
+            <a href="https://www.linkedin.com/in/coendrexler"><span class="fa fa-linkedin-square"></span></a>
           </div>
           
         </section>
