webkit overflow scroll test for iOS safari

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
 
     </div>
-    <div class="ParallaxContainer scroll-auto">
+    <div class="ParallaxContainer">
         <!-- Parallax Background Content -->
         <!-- <div class="ParallaxHalf"> -->
           <div class="BannerSlogan">
