Updates to scaling

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         <!-- Parallax Background Content -->
         <!-- <div class="ParallaxHalf"> -->
           <div class="BannerSlogan">
-          <p><span class="bannertext">&lt;</span>OLOURBLIND</p>
-          <p>_<span class="bannertext">&gt;</span>EVELOPMENT</p>
+          <p class="bannertext"><span>&lt;</span>OLOURBLIND</p>
+          <p class="bannertext">_<span>&gt;</span>EVELOPMENT</p>
           </div>
           <!-- <p id="bannertextsmall">Support a colourblind developer like me, and keep the world safer for everyone.</p> -->
 
