Added content and responsiveness to tiles

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <!-- All Content -->
     <div class="topbar">
       <div class="MediaLinks">
-        <a href="https://github.com/Coencidental" rel="noopener" target="_blank" aria-label="Github Link"><span class="fa fa-github" id="github"></span></a>
-        <a href="https://www.linkedin.com/in/coendrexler" rel="noopener" target="_blank" aria-label="LinkedIn Link"><span class="fa fa-linkedin" id="linkedin"></span></a>
-        <a href="mailto:cdrexler1999@gmail.com" rel="noopener" target="_blank" aria-label="Direct Email Link"><span class="fa fa-envelope-o" id="email"></span></a>
+        <a href="https://github.com/Coencidental" rel="noopener" target="_blank" aria-label="Github Link" alt="Github Link"><span class="fa fa-github" id="github"></span></a>
+        <a href="https://www.linkedin.com/in/coendrexler" rel="noopener" target="_blank" aria-label="LinkedIn Link" alt="LinkedIn Link"><span class="fa fa-linkedin" id="linkedin"></span></a>
+        <a href="mailto:cdrexler1999@gmail.com" rel="noopener" target="_blank" aria-label="Direct Email Link" alt="Direct Email Link"><span class="fa fa-envelope-o" id="email"></span></a>
       </div> 
 
       <div class="navbar_container">
@@ -89,9 +89,14 @@
 
         <p>Colourblind Development represents the professional face of me as an individual, and envelops all projects I work on going forward.  I use this space, this page, and this concept with genuine intent to contribute meaningfully to the bubble community of technology, and hopefully to any projects you would need an inspired and open eyed developer such as myself to help with.</p>
 
-        <p>If you'd like to chat, for any reason, but especially if you'd be willing to answer my growing list of questions about this new and exciting domain (yes, pun intended) that I find myself working tirelessly in, please do contact me via any of the primary methods at the top of the screen, otherwise I have some alternative methods of contact and some examples of my work in the 'Find' and 'Work' sections.</p>
+        <p>If you'd like to chat about anything, for any reason, ESPECIALLY if you'd be willing to answer my growing list of questions about this new and exciting domain (yes, pun intended) that I find myself working tirelessly in, please do contact me via any of the primary methods at the top of the screen, otherwise I have some alternative methods of contact and some examples of my work in the 'Find' and 'Work' sections.</p>
 
         <p>This website portfolio project was completed over a 5 day period, as part of my study at <a href="https://coderacademy.edu.au/">Coder Academy</a>.</p>
+      
+        <div class="coderimage">
+          <img src="Images/Coder.jpg">
+        </div>
+      
       </section>
       </div>
     </article>
