contact page tile link padding to increase reactive space

--- a/portfolio.html
+++ b/portfolio.html
@@ -103,7 +103,7 @@
             <span class="devicon-javascript-plain"></span>
           </div>
           <div class="skilldesc">
-            <p>My forté of experience is in audio.  From the production, post production, preparation, performance, design, manipulation, restoration, and anything else you could want.</p>
+            <p>In my time learning to develop basic static websites, I have learned to implement and understand basic javascript elements.  On this website for example, the home page navbar uses scroll linked width manipulation to hide the links until you have scroll the appropriate distance.</p>
           </div>
         </div>
 
@@ -112,7 +112,7 @@
               <img class="coderacademy"src="Images/CA.svg">
           </div>
           <div class="skilldesc">
-              <p>I have basic experience in the use of HTML for page markup.</p>
+              <p>Studying at Coder Academy in Brisbane Australia, I have thus far covered fundamental aspects of raw Ruby programming, HTML markup, CSS, accessibility, programming orientation, and more.  This course began on the 19th of August 2019, and will run for 6 months.  During this time, we will cover Ruby on Rails, Javascript, and far more intricate concepts of development.</p>
           </div>
         </div>
       
