Fixed contact centering for mobile

--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
                 <span class="logo-part hover-expand" >|</span>
       
                 <div class="navbar_linkbox">
-                    <a class="nav-link" href="contact.html">CONTACT</a>
+                    <a class="nav-link" href="contact.html">FIND</a>
                     <a class="nav-link" href="index.html">HOME</a>
                 </div>
       
