--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <span class="logo-part" >|</span>
     
               <div class="navbar_linkbox">
-                  <a class="nav-link" href="contact.html">CONTACT</a>
+                  <a class="nav-link" href="contact.html">FIND</a>
                   <a class="nav-link" href="index.html">HOME</a>
               </div>
     
