--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
           <div class="contactcard mediumcolour">
               <a href="https://medium.com/@coencidental"><span class="fa fa-medium"></span></a>
           </div>
-          <div class="contactcard mediumcolour">
+          <div class="contactcard" id="orange">
             <a href="https://soundcloud.com/coendrexler"><span class="fa fa-soundcloud"></span></a>
           </div> 
           <div class="contactcard linkedback">
