--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <p>This website portfolio project was completed over a 5 day period, as part of my study at <a href="https://coderacademy.edu.au/">Coder Academy</a>.</p>
       
         <div class="coderimage">
-          <img src="Images/Coder.jpg">
+          <img src="Images/Coder.jpg" alt="Coder Academy Logo">
         </div>
       
       </section>
