--- a/portfolio.html
+++ b/portfolio.html
@@ -109,7 +109,7 @@
 
         <div class="skillbar">
           <div class="skilltile">
-              <img class="coderacademy"src="Images/CA.svg">
+              <img class="coderacademy"src="Images/CA.svg" alt="Coder Academy Logo">
           </div>
           <div class="skilldesc">
               <p>Studying at Coder Academy in Brisbane Australia, I have thus far covered fundamental aspects of raw Ruby programming, HTML markup, CSS, accessibility, programming orientation, and more.  This course began on the 19th of August 2019, and will run for 6 months.  During this time, we will cover Ruby on Rails, Javascript, and far more intricate concepts of development.</p>
