--- a/portfolio.html
+++ b/portfolio.html
@@ -11,8 +11,8 @@
   
   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
-  <link href="Scripts/globalstyles.css" rel="stylesheet">
   <link href="Scripts/portfoliostyles.css" rel="stylesheet">
+  <link href="Scripts/globalstyles.css" rel="stylesheet">
   <!-- <script src="Scripts/scrollupdate.js"></script> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -112,7 +112,7 @@
               <img class="coderacademy"src="Images/CA.svg" alt="Coder Academy Logo">
           </div>
           <div class="skilldesc">
-              <p>Studying at Coder Academy in Brisbane Australia, I have thus far covered fundamental aspects of raw Ruby programming, HTML markup, CSS, accessibility, programming orientation, and more.  This course began on the 19th of August 2019, and will run for 6 months.  During this time, we will cover Ruby on Rails, Javascript, and far more intricate concepts of development.</p>
+              <p>Studying at Coder Academy in Brisbane Australia, I have thus far covered fundamental aspects of pure Ruby programming, HTML markup, CSS, accessibility, programming orientation, and more.  This course began on the 19th of August 2019, and will run for 6 months.  During this time, we will cover Ruby on Rails, Javascript, and far more intricate/abstract concepts and practises of development.</p>
           </div>
         </div>
       
