--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel='icon' href="Images/drawing.png">
   
 
-  <title>Home | CID Coding</title>  
+  <title>Home | CID Devworks</title>  
   
 </head>
 
@@ -102,5 +102,9 @@
     </article>
           
   </div>
+
+  <footer>
+    <div class="copyright"><p>&copy; Coen Drexler 2019, completed for Coder Academy, Brisbane.</p></div>
+  </footer>
 </body>
 </html>
