--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel='icon' href="Images/drawing.png">
 
-  <title>My Work | CID Coding</title>  
+  <title>My Work | CID Devworks</title>  
   
 </head>
 <body>
@@ -117,6 +117,6 @@
         </div>
       
       </article>
-
+  
 </body>
 </html>
