--- a/purpose.html
+++ b/purpose.html
@@ -14,12 +14,12 @@
   <!-- <script src="Scripts/scrollupdate.js"></script> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <meta name="description" content="Coen Isaac Drexler's web development portfolio - creative to creator, a 6 month progressive journey in programming.">
+  <meta name="description" content="Coen Drexler's brand purpose and motivation behind development.">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel='icon' href="Images/drawing.png">
 
-  <title>Purpose | CID Coding</title>  
+  <title>Purpose | CID Devworks</title>  
   
 </head>
 <body>
@@ -57,9 +57,9 @@
       </div>
       <article class="purposecontainer">
         <section class="mypurpose">
-          <h2 class="textcenter">Who am I?  Who cares?</h2>
+          <h2 class="textcenter">Who am I, why do I do this with ZERO prior experience, and who even cares?</h2>
           <hr>
-          <p>I truly, genuinely love audio, and it will always define the path of interest to me.  I believe wholeheartedly in the power and influence of audio, and in an accessible world, I love the idea of providing currently disabled yet entirely creative minds with the ability to express, and participate.  </p>
+          <p>To start out, I truly, genuinely love audio, and it will always define the path of interest to me.  I believe wholeheartedly in the power and influence of audio, and in an accessible world, I love the idea of providing currently disabled yet entirely creative minds with the ability to express, and participate.  </p>
           <p>And that's where my story began, trying to make a musician out of myself and to defy the odds of the people who had held me down.  Not a great first impression to you, I know, and I'm sorry for that, but it lends very significantly to the road I find myself on now.</p> 
           <p>Since then, I've tried and failed at my own musical pursuits, not in a way that I look back on in a negative manner, but rather one of progress and discovery.  I attended a university course for Music Technology in my pursuit to become a professional studio engineer, and in trying to force myself to travel several hours a day and spend a good amount of money in the process on travel costs for a course that ultimately wouldn't satisfy me creatively, I somehow missed how beautifully freeing and fantastically upfront technology is as an industry.</p>
           <p>As a result, when I unenrolled from that course, I found myself <em>INCREDIBLY</em> lost and terribly unsure of what to do.  My friends and family told me something that had been told to me all my life, and for once I actually listened to it:</p>
@@ -70,5 +70,8 @@
           <p>I found out doing a colourblind test for fun that, huh, I'm actually colourblind.  Very, very badly colourblind.  I mean, I can see colour, but definitely well past being appropriate for an electrician.  So, I after I finished my course, I scratched it off the list, and was back to square one.  Hospitality, failed trades, musical pursuits, and poor grades, despite high potential.  It was a really low point, and I'd say it's the worst I've been in my entire life.</p>
         </section>
       </article>
+      <footer>
+        <div class="copyright"><p>&copy; Coen Drexler 2019, completed for Coder Academy, Brisbane.</p></div>
+      </footer>
 </body>
 </html>
