--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
-  <link rel='icon' href="Images/drawing.png">
+  <link rel='icon' href="Images/Basic logo.png">
   
 
   <title>Home | CID Devworks</title>  
@@ -26,7 +26,7 @@
 </head>
 
 <body>   
-
+  <div class="pagewrapper">
   <div class="MainContainer invert">
     <!-- All Content -->
     <div class="topbar">
@@ -103,6 +103,7 @@
           
   </div>
 
+  </div>
   <footer>
     <div class="copyright"><p>&copy; Coen Drexler 2019, completed for Coder Academy, Brisbane.</p></div>
   </footer>
