some final mods

--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
 
         <p tabindex="0">This website portfolio project was completed over a 5 day period, as part of my study at <a href="https://coderacademy.edu.au/">Coder Academy</a>.</p>
       
+        <p tabindex="0">For me, this journey is just beginning.  I hope you'll join me in it, and thank you so much for visiting Colourblind Development.  I hope to be of service in the future.</p>
+        
         <div class="coderimage">
           <img src="Images/Coder.jpg" alt="Coder Academy Logo" tabindex="0">
         </div>
