--- a/contact.html
+++ b/contact.html
@@ -76,6 +76,9 @@
 
       <h1 class="textcenter">Things I considered important enough to blog:</h1>
 
+
+      <!-- Reusable Blog Post Bar with title section, content section, and thumbnail section -->
+
       <div class="blogpost">
         <div class="post_title">
           <h2>Date + Post Title</h2>
