--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         <a href="mailto:cdrexler1999@gmail.com" rel="noopener" target="_blank" aria-label="Direct Email Link" alt="Direct Email Link"><span class="fa fa-envelope-o" id="email"></span></a>
       </div> 
 
+      <!-- Reusable Navbar, defaults to consistent width on other pages -->
+
       <div class="navbar_container">
           <nav id="navbar">
             <div class="logo-full">
